[package]
name = "mb2-template"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
lsm303agr = "0.3"
microbit-v2 = "0.13.0"
panic-halt = "0.2.0"

[dependencies.critical-section-lock-mut]
git = "http://github.com/pdx-cs-rust-embedded/critical-section-lock-mut"

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
